# bank-marketing-analytics-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
analysis/: main.py  module1_customer_profile.py  module2_campaign_strategy.py  module3_market_environment_analysis.py
analysis/eda/: __init__.py  bias_limitation.py  config.py  data_cleaning.py  data_overview.py  data_quality.py  feature_exploration.py  interaction_analysis.py  target_distribution.py  utils.py
assets/: README.md
dashboard/: __init__.py  app.py  components.py  navigation.py  theme.py
dashboard/data/: __init__.py  home_content.py  module1_data.py  module2_data.py  module3_data.py
dashboard/views/: __init__.py  home.py  module1.py  module2.py  module3.py
data/: README.md
docs/: project_structure.md
reports/: executive_summary.md  module1_customer_profile_summary.md  module2_campaign_strategy_summary.md  module3_market_environment_analysis_summary.md
reports/eda/: EDA_Observation_Notes.md  Summary_Report.md  bias_limitation_summary.md  data_overview_summary.md  data_quality_summary.md  feature_exploration_summary.md  interaction_analysis_summary.md  target_distribution_summary.md
