[project]
name = "bank-marketing"
version = "0.1.0"
description = "Bank Marketing term-deposit analysis with Streamlit strategy dashboard"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.1",
]
